adjusted activities section into 2 columns and updated links

--- a/index.html
+++ b/index.html
@@ -210,51 +210,44 @@
 
 		<section id="activities" class="group">
 			<h4>Area Activities</h4>
-			<h5>Ski, Stay, &#38; Play</h5>
 			<div class="activity">
-				<h5>To Do:</h5>
-				<ul>
-					<li><a href="http://www.beavercreek.com/plan-your-trip/equipment-rentals/ski-and-snowboard-rentals.aspx" target="_blank">Rent your equipment</a></li>
-					<li><a href="http://www.beavercreek.com/plan-your-trip/lift-tickets/lift-tickets-search.aspx" target="_blank">Get your lift ticket</a></li>
-					<li><a href="http://www.beavercreek.com/events-and-activities/ice-skating.aspx" target="_blank">Ice Skate</a></li>
-					<li><a href="http://www.beavercreek.com/ski-and-snowboard-school/nordic-center.aspx#crosscountry#Top" target="_blank">Cross Country Ski</a></li>
-					<li><a href="http://www.beavercreek.com/ski-and-snowboard-school/nordic-center.aspx#snowshoe#Top" target="_blank">Snowshoe</a></li>
-					<li><a href="http://www.beavercreek.com/activitiesdetail/bc+-+tubing.axd" target="_blank">Haymaker Tubing Hill</a></li>
-				</ul>
-			</div>
-			<div class="activity">
-				<h5>To Eat:</h5>
-				<ul>
-					<li><a href="http://bluemoosepizza.com/" target="_blank">Blue Moose Pizza</a></li>
-					<li><a href="http://vin48.com/" target="_blank">Vin48</a></li>
-					<li><a href="http://www.toscaninibeavercreek.com/toscanini/" target="_blank">Toscanini</a></li>
-					<li><a href="http://www.beavercreekchophouse.com/" target="_blank">Beaver Creek Chophouse</a></li>
-					<li><a href="http://www.mirabelle1.com/" target="_blank">Mirabelle Restaurant</a></li>
-					<li><a href="http://www.themetbc.com/" target="_blank">The Metropolitan</a></li>
-				</ul>
-			</div>
-			<div class="activity">
-				<h5>To Drink:</h5>
-				<ul>
-					<li><a href="http://dustyboot.com/" target="_blank">Dusty Boot Saloon</a></li>
-					<li><a href="http://loadedjoes.com/" target="_blank">Loaded Joe’s</a></li>
-					<li><a href="http://www.agaveavon.com/" target="_blank">Agave</a></li>
-				</ul>
-			</div>
-			<div class="activity">
-				<h5>To Explore:</h5>
-				<ul>
-					<li><a href="http://www.visitavoncolorado.com/" target="_blank">Avon</a></li>
-					<li><a href="http://www.beavercreek.com/events-and-activities/events-and-activities-winter.aspx" target="_blank">Beaver Creek</a></li>
-					<li><a href="http://www.vail.com/" target="_blank">Vail</a></li>
-				</ul>
-			</div>
-			<div class="activity">
-				<h5>To Relax:</h5>
+				<h5>Relax &#38; Explore</h5>
 				<ul>
 					<li><a href="http://www.allegriaspa.com/" target="_blank">Allegria Spa</a></li>
-					<li><a href="http://www.spastruck.com/" target="_blank">Spa Struck</a></li>
+					<li><a href="http://www.visitavoncolorado.com/" target="_blank">Avon, CO</a></li>
+					<li><a href="http://www.beavercreek.com/events-and-activities/events-and-activities-winter.aspx" target="_blank">Beaver Creek</a></li>
+					<li><a href="http://www.beavercreek.com/ski-and-snowboard-school/nordic-center.aspx#crosscountry#Top" target="_blank">Cross Country Ski</a></li>
+					<li><a href="http://www.beavercreek.com/plan-your-trip/lift-tickets/lift-tickets-search.aspx" target="_blank">Get your lift ticket</a></li>
+					<li><a href="http://www.beavercreek.com/activitiesdetail/bc+-+tubing.axd" target="_blank">Haymaker Tubing Hill</a></li>
+					<li><a href="http://www.beavercreek.com/events-and-activities/ice-skating.aspx" target="_blank">Ice Skate</a></li>
+					<li><a href="http://www.beavercreek.com/plan-your-trip/equipment-rentals/ski-and-snowboard-rentals.aspx" target="_blank">Rent your equipment</a></li>
 					<li><a href="http://www.westinriverfrontbeavercreek.com/" target="_blank">Riverfront Resort &amp; Spa</a></li>
+					<li><a href="http://www.spastruck.com/" target="_blank">Spa Struck</a></li>
+					<li><a href="http://www.beavercreek.com/ski-and-snowboard-school/nordic-center.aspx#snowshoe#Top" target="_blank">Snowshoe</a></li>
+					<li><a href="http://www.vail.com/" target="_blank">Vail Resort</a></li>
+					<li><a href="http://www.vvf.org/arts/vilar-performing-arts-center.aspx" target="_blank">Vilar Performing Arts Center </a></li>
+				</ul>
+			</div>
+
+
+
+
+			<div class="activity">
+				<h5>Eat &#38; Drink</h5>
+				<ul>
+					
+					<li><a href="http://www.agaveavon.com/" target="_blank">Agave</a></li>
+					<li><a href="http://www.beavercreekchophouse.com/" target="_blank">Beaver Creek Chophouse</a></li>
+					<li><a href="http://beaverliquors.com/" target="_blank">Beaver Liquors</a></li>
+					<li><a href="http://www.coyotecafe.net/" target="_blank">Coyote Café</a></li>
+					<li><a href="http://dustyboot.com/" target="_blank">Dusty Boot Saloon</a></li>
+					<li><a href="http://loadedjoes.com/" target="_blank">Loaded Joe’s</a></li>
+					<li><a href="http://www.localjoespizza.com/" target="_blank">Local Joe’s</a></li>
+					<li><a href="http://www.themetbc.com/" target="_blank">Metropolitan</a></li>
+					<li><a href="http://www.mirabelle1.com/" target="_blank">Mirabelle Restaurant</a></li>
+					<li><a href="http://www.pazzospizza.com/" target="_blank">Pazzo’s Pizzeria</a></li>
+					<li><a href="http://www.toscaninibeavercreek.com/toscanini/" target="_blank">Toscanini</a></li>
+					<li><a href="http://vin48.com/" target="_blank">Vin48</a></li>
 				</ul>
 			</div>
 		</section>
@@ -264,7 +257,7 @@
 
 		<section id="registry">
 			<h4>Registry</h4>
-			<h5>Renee and Russell are registered at:</h5>
+			<h3>Renee &#38; Russell are registered at:</h3>
 			<ul>
 				<li><a href="http://www.surlatable.com/registry/giftRegistryList.jsp?id=200843885220">Sur La Table</a></li>
 				<li><a href="http://www1.macys.com/registry/wedding/guest/?registryId=6036143">Macy’s</a></li>
