added photos section and copywrite

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 		<li><a href="#lodging" data-scroll>Lodging</a></li>
 		<li><a href="#transportation" data-scroll>Transportation</a></li>
 		<li><a href="#activities" data-scroll>Area Activities</a></li>
+		<li><a href="#photos" data-scroll>Photos</a></li>
 		<li><a href="#registry" data-scroll>Registry</a></li>
 	</ul>
 </nav>
@@ -255,34 +256,53 @@
 		<!-- <section>I’ll definitely dance if you promise to play….
 				Sign our guest book and request a song you would like to hear at the reception! </section> -->
 
+
+		<section id="photos">
+			<h4>Photos</h4>
+			<p class="justify">We're using <a href="https://www.wedpics.com/wedding/MzAwNzU4/album">Wedpics</a> to capture our entire wedding experience. Help kick off our photo album by sharing your favorite candid photos with us: childhood memories, before we met, during our engagement, and anything else that tells our story. Of course, add photos of our special day!</p>
+			<a href="https://www.wedpics.com/wedding/MzAwNzU4/album"><img src="img/wedpicslogo.png" class="wedpics"></a>
+			<p><a href="https://www.wedpics.com/wedding/MzAwNzU4/album">Just click on the logo to view our album or add to it!</a></p>
+		</section>
+
+
 		<section id="registry">
 			<h4>Registry</h4>
-			<h3>Renee &#38; Russell are registered at:</h3>
 			<ul>
-				<li><a href="http://www.surlatable.com/registry/giftRegistryList.jsp?id=200843885220">Sur La Table</a></li>
-				<li><a href="http://www1.macys.com/registry/wedding/guest/?registryId=6036143">Macy’s</a></li>
+				<li class="registry"><a href="http://www.surlatable.com/registry/giftRegistryList.jsp?id=200843885220">Sur La Table</a></li>
+				<li class="registry"><a href="http://www1.macys.com/registry/wedding/guest/?registryId=6036143">Macy’s</a></li>
 				<!-- <li><a href="#registry">Amazon.com</a></li> -->
 			</ul>
 		</section>
 
+
 		<section id="behind">
-			<h4>Behind Our Day</h4>
-			<h6>Special thanks to the following people for helping us create wonderful memories:</h6>
-			<ul>	
-				<li><a href="http://www.beavercreek.com/groups/group-venues/allies-cabin.aspx" target="_blank">Beaver Creek, Kim Selani and Katherine Pollock</a></li>
-				<li><a href="http://www.brilliantearth.com/" target="_blank">Brilliant Earth</a></li>
-				<li><a href="http://www.greatimedj.com/" target="_blank">Greattime, DJ Fred Hammond</a></li>
-				<li><a href="http://www.christielodge.com/" target="_blank">The Christie Lodge, Jill Russell</a></li>
-				<li><a href="http://www.ulc.org/" target="_blank">The Universal Life Church</a></li>
-				<li><a href="http://turtlebusbar.com/" target="_blank">Turtle Bus Bar, Tommy Turtle</a></li>
-				<li><a href="https://www.facebook.com/waterlilyevents" target="_blank">Water Lily Events, Summer Norwell</a></li>
-				<li><a href="http://www.nateandjennyweddings.com/" target="_blank">Nate and Jenny Weddings</a></li>
+			<h4>Special Thanks</h4>
+			
+			<p class="justify">We are so grateful for all of the love and support we have received from our families, friends, and wedding party. You are all seriously incredible people and we look forward to spending our special day with you! A very special thanks to the following people for all of the “behind the scenes” work they do to make this the best day ever!</p>
+			<ul>
+				<li><a href="http://www.brilliantearth.com/" target="_blank">Beth Moore, Brilliant Earth</a></li>
+				<li><a href="http://www.paper-source.com/cgi-bin/paper/about/index.html" target="_blank">Brittany, Paper Source</a></li>
+				<li><a href="http://colormedee.com/" target="_blank">Dimitra Nardi, ColormeDee</a></li>
+				<li><a href="http://www.greatimedj.com/" target="_blank">Fred Hammond, Greatime DJs</a></li>
+				<li><a href="http://www.allegriaspa.com/" target="_blank">Gina Triglia, Allegria Spa at the Park Hyatt</a></li>
+				<li><a href="http://www.beavercreek.com/groups/group-venues/allies-cabin.aspx" target="_blank">Katherine Pollock and Kim Selani, Vairl Resorts</a></li>
+				<li><a href="http://cargocollective.com/KatherineDrejas" target="_blank">Katie Drejas, Save the Date Design</a></li>
+				<li><a href="http://www.sugarbreck.com/" target="_blank">Katy Pierson, Sugar</a></li>
+				<li><a href="http://www.christielodge.com/" target="_blank">Nancy DeCesare, Jill Russell, and Pamela Wylie, The Christie Lodge, Jill Russell</a></li>
+				<li><a href="http://www.nateandjennyweddings.com/" target="_blank">Nate Agnini and Jenny Nelson, Nate and Jenny Weddings</a></li>
+				<li><a href="http://50eastcalligraphy.com/" target="_blank">Stephanie Sokolowski, 50 East Calligraphy</a></li>
+				<li><a href="https://www.facebook.com/waterlilyevents" target="_blank">Summer Norwell, Water Lily Events</a></li>
+				<li><a href="http://turtlebusbar.com/" target="_blank">Tommy Turtle, Turtle Bus Bar</a></li>
+				<li><a href="http://www.ulc.org/" target="_blank">Universal Life Church</a></li>
 			</ul>
 		</section>
 
+
+
+		<span><em><small>Site built and designed by the bride and groom &copy; 2014.</small></em></span>
+
 	</article>
 	<footer></footer>
-
 </div>
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
