added app download for wedpics

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 		<h2 class="press-light">March 6, 2015</h2>
 		<h2 class="press-light">Beaver Creek, Colorado</h2>
 
-		<section id="story">
+		<section>
 			<img src="img/russellrenee.jpg" class="us">
-			<h4>Our Story</h4>
+			<h4 id="story">Our Story</h4>
 			<p class="justify">Our story begins in 2010 in a little hair salon in the Lincoln Park neighborhood of Chicago where Renee was working with Sara, Russell’s stepmom. Sara often talked to Renee about Russell, her hilarious and smart stepson who lived in Michigan. Finally, Renee’s interest was peaked, and she decided to send Russell a Facebook message. Over the next few months, Renee and Russell traveled between Michigan and Illinois, and eventually, Russell moved back to his hometown of Chicago. Russell and Renee moved in to a charming little Wicker Park apartment in May of 2012. On Friday, August 30, 2013, Russell and Renee got engaged! After much discussion and exploration, we decided to make Colorado our new home and moved to Broomfield in April of 2014. We are so excited for our future together and can’t wait to share our special day with you!</p>
 		</section>	
 			
@@ -261,7 +261,13 @@
 			<h4>Photos</h4>
 			<p class="justify">We're using <a href="https://www.wedpics.com/wedding/MzAwNzU4/album">Wedpics</a> to capture our entire wedding experience. Help kick off our photo album by sharing your favorite candid photos with us: childhood memories, before we met, during our engagement, and anything else that tells our story. Of course, add photos of our special day!</p>
 			<a href="https://www.wedpics.com/wedding/MzAwNzU4/album"><img src="img/wedpicslogo.png" class="wedpics"></a>
-			<p><a href="https://www.wedpics.com/wedding/MzAwNzU4/album">Just click on the logo to view our album or add to it!</a></p>
+			<p><a href="https://www.wedpics.com/wedding/MzAwNzU4/album">Just click on the logo to view our album or add to it from your computer!</a></p>
+			<div class="wedpics group">
+				<a href="https://itunes.apple.com/app/wedpics-wedding-photo-app/id549402355?mt=8"><img src="img/appstore.png" class="wedpicsapp pull"></a>
+				<a href="https://play.google.com/store/apps/details?id=com.dejami.WedPics&hl=en"><img src="img/googleplay.png" class="wedpicsapp pull"></a>
+			</div>
+
+			<p>Use the Wedding ID: ReneeRussell2015</p>
 		</section>
 
 
@@ -285,7 +291,7 @@
 				<li><a href="http://colormedee.com/" target="_blank">Dimitra Nardi, ColormeDee</a></li>
 				<li><a href="http://www.greatimedj.com/" target="_blank">Fred Hammond, Greatime DJs</a></li>
 				<li><a href="http://www.allegriaspa.com/" target="_blank">Gina Triglia, Allegria Spa at the Park Hyatt</a></li>
-				<li><a href="http://www.beavercreek.com/groups/group-venues/allies-cabin.aspx" target="_blank">Katherine Pollock and Kim Selani, Vairl Resorts</a></li>
+				<li><a href="http://www.beavercreek.com/groups/group-venues/allies-cabin.aspx" target="_blank">Katherine Pollock and Kim Selani, Vail Resorts</a></li>
 				<li><a href="http://cargocollective.com/KatherineDrejas" target="_blank">Katie Drejas, Save the Date Design</a></li>
 				<li><a href="http://www.sugarbreck.com/" target="_blank">Katy Pierson, Sugar</a></li>
 				<li><a href="http://www.christielodge.com/" target="_blank">Nancy DeCesare, Jill Russell, and Pamela Wylie, The Christie Lodge, Jill Russell</a></li>
