added honeymoon section and contact information

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<section>
 			<img src="img/russellrenee.jpg" class="us">
 			<h4 id="story">Our Story</h4>
-			<p class="justify">Our story begins in 2010 in a little hair salon in the Lincoln Park neighborhood of Chicago where Renee was working with Sara, Russell’s stepmom. Sara often talked to Renee about Russell, her hilarious and smart stepson who lived in Michigan. Finally, Renee’s interest was peaked, and she decided to send Russell a Facebook message. Over the next few months, Renee and Russell traveled between Michigan and Illinois, and eventually, Russell moved back to his hometown of Chicago. Russell and Renee moved in to a charming little Wicker Park apartment in May of 2012. On Friday, August 30, 2013, Russell and Renee got engaged! After much discussion and exploration, we decided to make Colorado our new home and moved to Broomfield in April of 2014. We are so excited for our future together and can’t wait to share our special day with you!</p>
+			<p class="justify">Our story begins in 2010 in a little hair salon in the Lincoln Park neighborhood of Chicago where Renee was working with Sara, Russell’s stepmom. Sara often talked to Renee about Russell, her hilarious and smart stepson who lived in Michigan. Finally, Renee’s interest was peaked, and she decided to send Russell a Facebook message. Over the next few months, we traveled between Michigan and Illinois, and by the end of 2010 Russell moved back to his hometown of Chicago. In May of 2012, we moved in to a charming little Wicker Park apartment. On Friday, August 30, 2013, we got engaged! After much discussion and exploration, we decided to make Colorado our new home and moved to Broomfield in April of 2014. We are so excited for our future together and can’t wait to share our special day with you!</p>
 		</section>	
 			
 		<section id="party">
@@ -281,6 +281,20 @@
 		</section>
 
 
+		<section id="registry">
+			<h4>Honeymoon</h4>
+			<p class="justify">After taking our first cruise together in 2014, we got hooked! We will be spending our honeymoon aboard the Celebrity Equinox cruising through the Caribbean. We will be exploring:</p>
+			<ul>
+				<li>St. Thomas: Charlotte Amalie</li>
+				<li>St. Kitts: Basseterre</li>
+				<li>Barbados: Bridgetown</li>
+				<li>Dominca: Roseau</li>
+				<li>St. Maarten: Philipsburg</li>
+			</ul>	
+			<p>We will leave for our honeymoon on March 27 from Fort Lauderdale, Florida just a few weeks after the wedding!</p>
+		</section>
+
+
 		<section id="behind">
 			<h4>Special Thanks</h4>
 			
@@ -303,6 +317,7 @@
 			</ul>
 		</section>
 
+		<p>Please email us at <a href="mailto:reneerussell2015@gmail.com">ReneeRussell2015@gmail.com</a> if you have any questions, need more information, or just want to send some love!</p>
 
 
 		<span><em><small>Site built and designed by the bride and groom &copy; 2014.</small></em></span>
