changed thank yous to include parents

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 		<section id="behind">
 			<h4>Special Thanks</h4>
 			
-			<p class="justify">We are so grateful for all of the love and support we have received from our families, friends, and wedding party. You are all seriously incredible people and we look forward to spending our special day with you! A very special thanks to the following people for all of the “behind the scenes” work they do to make this the best day ever!</p>
+			<p class="justify">We are so grateful for all of the love and support we have received from our parents, wedding party, relatives, and friends. You are all seriously incredible people and we look forward to spending our special day with you! A very special thanks to the following people for all of the “behind the scenes” work they do to make this the best day ever!</p>
 			<ul>
 				<li><a href="http://www.brilliantearth.com/" target="_blank">Beth Moore, Brilliant Earth</a></li>
 				<li><a href="http://www.paper-source.com/cgi-bin/paper/about/index.html" target="_blank">Brittany, Paper Source</a></li>
