removed target blank

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 					</ol>
 				</div>
 				<a href="http://www.beavercreek.com/events-and-activities/events-and-activities-winter.aspx"><img src="img/skistayplay.jpg" class="venue pull"></a>
-				<p class="justify">We chose to have our wedding on a Friday so that our guests can plan to explore and enjoy all that the Vail Valley has to offer. On Saturday, Renee and Russell will be <a href="http://www.beavercreek.com/" target="_blank">skiing Beaver Creek</a> and will probably end the day ice-skating at the <a href="http://www.beavercreek.com/events-and-activities/ice-skating.aspx" target="_blank">Black Family Ice Skating Rink</a>. Between Avon, <a href="http://www.beavercreek.com/events-and-activities/events-and-activities-winter.aspx" target="_blank">Beaver Creek</a>, and Vail, there is something for everyone! Please check out our <a href="#activities" data-scroll>Area Activities</a> section for some ideas! Also, both Boulder and Denver are about 2 hours away and could be a wonderful addition to your vacation!</p>
+				<p class="justify">We chose to have our wedding on a Friday so that our guests can plan to explore and enjoy all that the Vail Valley has to offer. On Saturday, Renee and Russell will be <a href="http://www.beavercreek.com/">skiing Beaver Creek</a> and will probably end the day ice-skating at the <a href="http://www.beavercreek.com/events-and-activities/ice-skating.aspx">Black Family Ice Skating Rink</a>. Between Avon, <a href="http://www.beavercreek.com/events-and-activities/events-and-activities-winter.aspx">Beaver Creek</a>, and Vail, there is something for everyone! Please check out our <a href="#activities" data-scroll>Area Activities</a> section for some ideas! Also, both Boulder and Denver are about 2 hours away and could be a wonderful addition to your vacation!</p>
 				<p>Friendly Reminder:  The Christie Lodge, Allie's Cabin, and Beaver Creek Village are smoke free environments.</p>
 			</section>
 		</section>
@@ -158,11 +158,6 @@
 				<dd><em>Women:</em> Have fun with accessories and don’t be afraid of bright colors! Wear a floor-length gown, knee-length cocktail dress, your dressiest little black dress, a dressy suit, or dressy separates. Whatever you wear, add some <em>flair!</em></dd>
 				<dd><em>Men:</em>  Definitely rock a dark suit or maybe even a tux. Get creative with a colored or patterned dress shirt, tie, or bow tie. Maybe add some interesting accessories: cuff links, tie clip, pocket square, watch, or your best fedora! Wear whatever shoes you want <em>(and you know how I feel about socks)</em>.</dd>
 			</dl>
-
-
-
-
-
 		</section>
 
 		<section id="lodging">
@@ -185,10 +180,10 @@
 			<p class="justify"><em>Important note:</em> While it may seem early, March is high season in Colorado for skiing, and the Christie Lodge books up early! We recommend you book your room for our wedding no later than September 30, 2014.</p>
 			<h6>The Christie Lodge has two options for our guests:</h6>
 			<dl class="option">
-				<dt><a href="http://www.christielodge.com/one-bedroom-suites/" target="_blank"><em>Option 1 - </em>One Bedroom Suites:</a>
+				<dt><a href="http://www.christielodge.com/one-bedroom-suites/"><em>Option 1 - </em>One Bedroom Suites:</a>
 				<dt>
 				<dd>The one bedroom suite offers a partial kitchen, wood burning fireplace, balcony, a queen sized bed in the bedroom, a queen sized sleeper sofa in the living room, and a child sized day bed. Max occupancy: 2 adults and 2 children under 12.  $159.00 per night, 2 night minimum.</dd>
-				<dt><a href="http://www.christielodge.com/three-bedroom-suites/" target="_blank"><em>Option 2 - </em>Three Bedroom Suites:</a></dt>
+				<dt><a href="http://www.christielodge.com/three-bedroom-suites/"><em>Option 2 - </em>Three Bedroom Suites:</a></dt>
 				<dd>The three bedroom suite offers a partial kitchen, wood burning fireplace, balcony, three queen sized beds in the bedrooms, three bathrooms, a queen sized sleeper sofa, and a child sized daybed. Max occupancy: 6 adults and 1 child under 12. $339 per night, 3 night minimum.</dd>
 			</dl>
 			<p>If you rent a car or decide to drive, The Christie Lodge offers free parking.</p>
@@ -285,20 +280,20 @@
 			<h4>Honeymoon</h4>
 			<p class="justify">After taking our first cruise together in 2014, we got hooked! We will be spending our honeymoon aboard the Celebrity Equinox cruising through the Caribbean. We will be exploring:</p>
 			<ul>
-				<li>St. Thomas: Charlotte Amalie</li>
-				<li>St. Kitts: Basseterre</li>
-				<li>Barbados: Bridgetown</li>
-				<li>Dominca: Roseau</li>
-				<li>St. Maarten: Philipsburg</li>
+				<li><a href="http://www.visitusvi.com/stthomas/homepage">St. Thomas: Charlotte Amalie</a></li>
+				<li><a href="http://www.stkittstourism.kn/">St. Kitts: Basseterre</a></li>
+				<li><a href="http://www.barbados.org/btown.htm#.U1qEqK1dVVs">Barbados: Bridgetown</a></li>
+				<li><a href="http://www.dominica.dm/index.php/day-trips?sobi2Task=sobi2Details&catid=14&sobi2Id=120">Dominca: Roseau</a></li>
+				<li><a href="http://www.st-maarten.com/">St. Maarten: Philipsburg</a></li>
 			</ul>	
-			<p>We will leave for our honeymoon on March 27 from Fort Lauderdale, Florida just a few weeks after the wedding!</p>
+			<p>We will leave for our honeymoon on March 27 from <a href="http://www.visitflorida.com/en-us/cities/fort-lauderdale.html">Fort Lauderdale, Florida</a> just a few weeks after the wedding!</p>
 		</section>
 
 
 		<section id="behind">
 			<h4>Special Thanks</h4>
 			
-			<p class="justify">We are so grateful for all of the love and support we have received from our parents, wedding party, relatives, and friends. You are all seriously incredible people and we look forward to spending our special day with you! A very special thanks to the following people for all of the “behind the scenes” work they do to make this the best day ever!</p>
+			<p class="justify">We are so grateful for all of the love and support we have received from our parents, <a href="#party">wedding party</a>, relatives, and friends. You are all seriously incredible people and we look forward to spending our special day with you! A very special thanks to the following people for all of the “behind the scenes” work they do to make this the best day ever!</p>
 			<ul>
 				<li><a href="http://www.brilliantearth.com/" target="_blank">Beth Moore, Brilliant Earth</a></li>
 				<li><a href="http://www.paper-source.com/cgi-bin/paper/about/index.html" target="_blank">Brittany, Paper Source</a></li>
