added last names and adjusted styling

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<section>
 			<img src="img/russellrenee.jpg" class="us">
 			<h4 id="story">Our Story</h4>
-			<p class="justify">Our story begins in 2010 in a little hair salon in the Lincoln Park neighborhood of Chicago where Renee was working with Sara, Russell’s stepmom. Sara often talked to Renee about Russell, her hilarious and smart stepson who lived in Michigan. Finally, Renee’s interest was peaked, and she decided to send Russell a Facebook message. Over the next few months, we traveled between Michigan and Illinois, and by the end of 2010 Russell moved back to his hometown of Chicago. In May of 2012, we moved in to a charming little Wicker Park apartment. On Friday, August 30, 2013, we got engaged! After much discussion and exploration, we decided to make Colorado our new home and moved to Broomfield in April of 2014. We are so excited for our future together and can’t wait to share our special day with you!</p>
+			<p class="justify">Our story begins in 2010 in the Lincoln Park neighborhood of Chicago where Renee was working with Sara, Russell’s stepmom. Sara often talked to Renee about Russell, her hilarious and smart stepson who lived in Michigan. Finally, Renee’s interest was peaked, and she decided to send Russell a Facebook message. Over the next few months, we traveled between Michigan and Illinois, and by the end of 2010 Russell moved back to his hometown of Chicago. In May of 2012, we moved in to a charming little Wicker Park apartment. On Friday, August 30, 2013, we got engaged! After much discussion and exploration, we decided to make Colorado our new home and moved to Broomfield in April of 2014. We are so excited for our future together and can’t wait to share our special day with you!</p>
 		</section>	
 			
 		<section id="party">
@@ -293,10 +293,10 @@
 		<section id="behind">
 			<h4>Special Thanks</h4>
 			
-			<p class="justify">We are so grateful for all of the love and support we have received from our parents, <a href="#party">wedding party</a>, relatives, and friends. You are all seriously incredible people and we look forward to spending our special day with you! A very special thanks to the following people for all of the “behind the scenes” work they do to make this the best day ever!</p>
+			<p class="justify">We are so grateful for all of the love and support we have received from our parents, <a href="#party" data-scroll>wedding party</a>, relatives, and friends. You are all seriously incredible people and we look forward to spending our special day with you! A very special thanks to the following people for all of the “behind the scenes” work they do to make this the best day ever!</p>
 			<ul>
 				<li><a href="http://www.brilliantearth.com/" target="_blank">Beth Moore, Brilliant Earth</a></li>
-				<li><a href="http://www.paper-source.com/cgi-bin/paper/about/index.html" target="_blank">Brittany, Paper Source</a></li>
+				<li><a href="http://www.paper-source.com/cgi-bin/paper/about/index.html" target="_blank">Brittany Walker, Paper Source</a></li>
 				<li><a href="http://colormedee.com/" target="_blank">Dimitra Nardi, ColormeDee</a></li>
 				<li><a href="http://www.greatimedj.com/" target="_blank">Fred Hammond, Greatime DJs</a></li>
 				<li><a href="http://www.allegriaspa.com/" target="_blank">Gina Triglia, Allegria Spa at the Park Hyatt</a></li>
