added hover effect for main image

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 		<h2 class="press-light">Beaver Creek, Colorado</h2>
 
 		<section>
-			<img src="img/russellrenee.jpg" class="us">
+			<div class="usback">
+				<img src="img/russellrenee.jpg" class="us">
+			</div>
 			<h4 id="story">Our Story</h4>
 			<p class="justify">Our story begins in 2010 in the Lincoln Park neighborhood of Chicago where Renee was working with Sara, Russell’s stepmom. Sara often talked to Renee about Russell, her hilarious and smart stepson who lived in Michigan. Finally, Renee’s interest was peaked, and she decided to send Russell a Facebook message. Over the next few months, we traveled between Michigan and Illinois, and by the end of 2010 Russell moved back to his hometown of Chicago. In May of 2012, we moved in to a charming little Wicker Park apartment. On Friday, August 30, 2013, we got engaged! After much discussion and exploration, we decided to make Colorado our new home and moved to Broomfield in April of 2014. We are so excited for our future together and can’t wait to share our special day with you!</p>
 		</section>	
