added minimum size styling

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 			<h4>Wedding Events</h4>
 			<div class="group">
 				<a href="#welcomeevening" data-scroll>
-					<div class="overview pull">
+					<div class="overview">
 						<h3>Welcome Evening</h3>
 						<ol>
 							<li>Thursday, March 5, 2015</li>
@@ -81,7 +81,7 @@
 				</a>
 
 				<a href="#weddingday" data-scroll>
-					<div class="overview pull">
+					<div class="overview">
 						<h3>Wedding Day</h3>
 						<ol>
 							<li>Friday, March 6, 2015</li>
@@ -92,7 +92,7 @@
 				</a>
 
 				<a href="#skistayplay" data-scroll>
-					<div class="overview pull">
+					<div class="overview">
 						<h3>Ski, Stay, &#38; Play</h3>
 							<ol>
 								<li>Saturday, March 7, 2015</li>
@@ -105,7 +105,7 @@
 
 
 			<section class="event group">
-				<div class="details pull">
+				<div class="details">
 					<h5 id="welcomeevening">Welcome Evening</h5>
 					<ol>
 						<li>Thursday, March 5, 2015</li>
@@ -114,13 +114,13 @@
 						<li><a href="#attire">Casual Attire</a></li>
 					</ol>
 				</div>
-				<a href="#christielodge" data-scroll><img src="img/christielodgeinside.jpg" class="venue pull"></a>
+				<a href="#christielodge" data-scroll><img src="img/christielodgeinside.jpg" class="venue"></a>
 				<p class="justify">If you plan to arrive on Thursday, we hope you'll join us for a casual and relaxing evening at the lodge. We are still working on the details, but we will definitely have catering from a local restaurant, board games, and of course, some libations. We hope you will swing by, relax with us, and meet some of the other important people in our lives. This will likely start around 7:00, please check back for more details.</p>
 				<p>Friendly Reminder:  The Christie Lodge, Allie's Cabin, and Beaver Creek Village are smoke free environments.</p>
 			</section>
 
 			<section class="event group">
-				<div class="details pull">
+				<div class="details">
 					<h5 id="weddingday">Wedding Day</h5>
 					<ol>
 						<li>Friday, March 6, 2015</li>
@@ -129,21 +129,21 @@
 						<li><a href="#attire" data-scroll>Creative Black Tie Optional</a></li>
 					</ol>
 				</div>
-				<a  href="http://www.beavercreek.com/groups/group-venues/allies-cabin.aspx"><img src="img/alliescabin.jpg" class="venue pull"></a>
+				<a  href="http://www.beavercreek.com/groups/group-venues/allies-cabin.aspx"><img src="img/alliescabin.jpg" class="venue"></a>
 				<p class="justify">The ceremony and reception will both take place at Allie’s Cabin on Beaver Creek Mountain. A shuttle will be available to take guests from The Christie Lodge to Beaver Creek where a sleigh will pick you up. You’ll have the same service on the way back home. The ceremony will begin as soon as everyone is up the mountain, around 6:30. Due to the capacity of Allie’s, there will be limited availability for seats during the ceremony. We promise to keep it short and sweet for those that will be standing! Dinner and dancing will follow the ceremony. The first sleigh back down the mountain will leave at 11:45pm. Full details regarding the timing of shuttles will be provided to you when you check-in at The Christie Lodge. Show up, sit back, and enjoy the ride.</p>
 				<p>Friendly Reminder:  The Christie Lodge, Allie's Cabin, and Beaver Creek Village are smoke free environments.</p>
 			</section>
 
 
 			<section class="event group">
-				<div class="details pull">
+				<div class="details">
 					<h5 id="skistayplay">Ski, Stay, &#38; Play</h5>
 					<ol>
 						<li>Saturday, March 7, 2015</li>
 						<li><a href="http://www.beavercreek.com/events-and-activities/events-and-activities-winter.aspx">Vail Valley</a></li>
 					</ol>
 				</div>
-				<a href="http://www.beavercreek.com/events-and-activities/events-and-activities-winter.aspx"><img src="img/skistayplay.jpg" class="venue pull"></a>
+				<a href="http://www.beavercreek.com/events-and-activities/events-and-activities-winter.aspx"><img src="img/skistayplay.jpg" class="venue"></a>
 				<p class="justify">We chose to have our wedding on a Friday so that our guests can plan to explore and enjoy all that the Vail Valley has to offer. On Saturday, Renee and Russell will be <a href="http://www.beavercreek.com/">skiing Beaver Creek</a> and will probably end the day ice-skating at the <a href="http://www.beavercreek.com/events-and-activities/ice-skating.aspx">Black Family Ice Skating Rink</a>. Between Avon, <a href="http://www.beavercreek.com/events-and-activities/events-and-activities-winter.aspx">Beaver Creek</a>, and Vail, there is something for everyone! Please check out our <a href="#activities" data-scroll>Area Activities</a> section for some ideas! Also, both Boulder and Denver are about 2 hours away and could be a wonderful addition to your vacation!</p>
 				<p>Friendly Reminder:  The Christie Lodge, Allie's Cabin, and Beaver Creek Village are smoke free environments.</p>
 			</section>
@@ -260,8 +260,8 @@
 			<a href="https://www.wedpics.com/wedding/MzAwNzU4/album"><img src="img/wedpicslogo.png" class="wedpics"></a>
 			<p><a href="https://www.wedpics.com/wedding/MzAwNzU4/album">Just click on the logo to view our album or add to it from your computer!</a></p>
 			<div class="wedpics group">
-				<a href="https://itunes.apple.com/app/wedpics-wedding-photo-app/id549402355?mt=8"><img src="img/appstore.png" class="wedpicsapp pull"></a>
-				<a href="https://play.google.com/store/apps/details?id=com.dejami.WedPics&hl=en"><img src="img/googleplay.png" class="wedpicsapp pull"></a>
+				<a href="https://itunes.apple.com/app/wedpics-wedding-photo-app/id549402355?mt=8"><img src="img/appstore.png" class="wedpicsapp"></a>
+				<a href="https://play.google.com/store/apps/details?id=com.dejami.WedPics&hl=en"><img src="img/googleplay.png" class="wedpicsapp"></a>
 			</div>
 
 			<p>Use the Wedding ID: ReneeRussell2015</p>
