fixed media qs for nav and tweaked a couple other spots

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <nav data-scroll-header>
 	<ul class="group">
-		<li><a href="#story" data-scroll>Our Story</a></li>
-		<li><a href="#party" data-scroll>Wedding Party</a></li>
+		<li><a href="#story" class="hide-sm" data-scroll>Our Story</a></li>
+		<li><a href="#party" class="hide-sm" data-scroll>Wedding Party</a></li>
 		<li><a href="#events" data-scroll>Wedding Events</a></li>
 		<li><a href="#attire" data-scroll>Attire</a></li>
 		<li><a href="#lodging" data-scroll>Lodging</a></li>
@@ -24,6 +24,8 @@
 		<li><a href="#activities" data-scroll>Area Activities</a></li>
 		<li><a href="#photos" data-scroll>Photos</a></li>
 		<li><a href="#registry" data-scroll>Registry</a></li>
+		<li><a href="#honeymoon" class="hide-med" data-scroll>Honeymoon</a></li>
+		<li><a href="#thanks" class="hide-med" data-scroll>Special Thanks</a></li>
 	</ul>
 </nav>
 
@@ -278,7 +280,7 @@
 		</section>
 
 
-		<section id="registry">
+		<section id="honeymoon">
 			<h4>Honeymoon</h4>
 			<p class="justify">After taking our first cruise together in 2014, we got hooked! We will be spending our honeymoon aboard the Celebrity Equinox cruising through the Caribbean. We will be exploring:</p>
 			<ul>
@@ -292,7 +294,7 @@
 		</section>
 
 
-		<section id="behind">
+		<section id="thanks">
 			<h4>Special Thanks</h4>
 			
 			<p class="justify">We are so grateful for all of the love and support we have received from our parents, <a href="#party" data-scroll>wedding party</a>, relatives, and friends. You are all seriously incredible people and we look forward to spending our special day with you! A very special thanks to the following people for all of the “behind the scenes” work they do to make this the best day ever!</p>
