added button to go to the top nav on mobile

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-<nav data-scroll-header>
+<nav id="top" data-scroll-header>
 	<ul class="group">
 		<li><a href="#story" class="hide-sm" data-scroll>Our Story</a></li>
 		<li><a href="#party" class="hide-sm" data-scroll>Wedding Party</a></li>
@@ -323,6 +323,7 @@
 
 	</article>
 	<footer></footer>
+	<a href="#top" class="gotop" data-scroll>Top</a>
 </div>
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
