--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 				<li><a href="http://www.beavercreek.com/groups/group-venues/allies-cabin.aspx" target="_blank">Katherine Pollock and Kim Selani, Vail Resorts</a></li>
 				<li><a href="http://cargocollective.com/KatherineDrejas" target="_blank">Katie Drejas, Save the Date Design</a></li>
 				<li><a href="http://www.sugarbreck.com/" target="_blank">Katy Pierson, Sugar</a></li>
-				<li><a href="http://www.christielodge.com/" target="_blank">Nancy DeCesare, Jill Russell, and Pamela Wylie, The Christie Lodge, Jill Russell</a></li>
+				<li><a href="http://www.christielodge.com/" target="_blank">Nancy DeCesare, Jill Russell, and Pamela Wylie, The Christie Lodge</a></li>
 				<li><a href="http://www.nateandjennyweddings.com/" target="_blank">Nate Agnini and Jenny Nelson, Nate and Jenny Weddings</a></li>
 				<li><a href="http://50eastcalligraphy.com/" target="_blank">Stephanie Sokolowski, 50 East Calligraphy</a></li>
 				<li><a href="https://www.facebook.com/waterlilyevents" target="_blank">Summer Norwell, Water Lily Events</a></li>
